# w9-mail

./: README.md  install.sh
backend/: Cargo.toml
backend/src/: auth.rs  email.rs  handlers.rs  main.rs
frontend/: package.json
frontend/app/: page.tsx
frontend/app/components/: Turnstile.tsx
frontend/app/docs/: page.tsx
frontend/app/login/: page.tsx
frontend/app/manage/: page.tsx
frontend/lib/: session.ts
public/: site.webmanifest
